# wasm-webworker-demo

./: Cargo.toml  README.md  index.html  index.js  run.sh  serve.mjs  worker.js
src/: lib.rs
